--- a/.github/workflows/cron_crawler_us.yml
+++ b/.github/workflows/cron_crawler_us.yml
@@ -3,8 +3,8 @@ name: Toss Signal crawler (US)
 on:
   schedule:
     # 23:00~06:00 KST (14:00~21:00 UTC) during weekdays (Mon-Fri)
-    # Run every 20 minutes (e.g., 0, 20, 40)
-    - cron: '*/20 14-21 * * 1-5'
+    # Run every 20 minutes (e.g., 7, 27, 47 to avoid GH Actions delay)
+    - cron: '7,27,47 14-21 * * 1-5'
   workflow_dispatch: # Allow manual trigger
 
 permissions:
