--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ streamlit>=1.32.0
 beautifulsoup4>=4.12.3
 requests>=2.31.0
 finance-datareader>=0.9.70
-yfinance>=0.2.37
-google-generativeai>=0.4.1
+pykrx>=1.0.45
+google-genai>=1.47.0
 python-dotenv>=1.0.1
