--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit>=1.32.0
+streamlit>=0.89.0
 beautifulsoup4>=4.12.3
 requests>=2.31.0
 finance-datareader>=0.9.70
 pykrx>=1.0.45
-google-genai>=1.47.0
+google-genai>=0.1.0
 python-dotenv>=1.0.1
+pandas>=1.3.5
