chore: restructure project directories (backend, streamlit, tests, scripts, docs)

--- a/.github/workflows/cron_crawler_kr.yml
+++ b/.github/workflows/cron_crawler_kr.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Run KR crawler
       env:
         GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-      run: python crawler.py --market KR
+      run: python backend/crawler.py --market KR
       
     - name: Commit and Push changes
       run: |
