--- a/.github/workflows/cron_crawler_us.yml
+++ b/.github/workflows/cron_crawler_us.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Run US crawler
       env:
         GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-      run: python crawler.py --market US
+      run: python backend/crawler.py --market US
       
     - name: Commit and Push changes
       run: |
